--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,7 +87,7 @@
     </application>
 
     <permission
-        android:name="qtc.project.nino_customer.permission.MAPS_RECEIVE"
+        android:name="qtc.project.pos.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
 
     <uses-feature
@@ -111,7 +111,7 @@
     <uses-permission
         android:name="android.permission.SEND_SMS"
         tools:node="remove" />
-    <uses-permission android:name="qtc.project.fighttonice.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="qtc.project.pos.permission.MAPS_RECEIVE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
