--- a/app/build.gradle
+++ b/app/build.gradle
@@ -170,8 +170,8 @@ dependencies {
 
     //barcode
     implementation 'me.dm7.barcodescanner:zxing:1.9.13'
-    implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
-    implementation 'com.google.zxing:core:3.2.1'
+//    implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+//    implementation 'com.google.zxing:core:3.2.1'
 }
 repositories {
     mavenCentral()
