--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="qtc.project.pos">
 
-    <uses-permission android:name="android.permission.CAMERA" />
 <!--    <uses-feature android:name="android.hardware.camera" />-->
 <!--    <uses-feature android:name="android.hardware.camera2" />-->
 <!--    <uses-feature android:name="android.hardware.camera.autofocus" />-->
@@ -23,6 +22,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
 <!--    <uses-permission-->
 <!--        android:name="android.permission.READ_PHONE_STATE"-->
 <!--        tools:node="remove" />-->
@@ -46,13 +47,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
+        android:hardwareAccelerated="false"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".activity.Qr_BarcodeActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <!--
      Set custom default icon. This is used when no icon is set for incoming notification messages.
@@ -71,6 +73,11 @@
 
         <activity android:name=".activity.HomeActivity" />
         <activity android:name=".activity.LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
             <intent-filter>
                 <action android:name="check_auth" />
