--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,7 +134,7 @@ dependencies {
 
     //facebook-sdk
     //login-social
-    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    //implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
 
     //circle button,chart-bar
     implementation 'com.nineoldandroids:library:2.4.0'
@@ -170,8 +170,8 @@ dependencies {
 
     //barcode
     implementation 'me.dm7.barcodescanner:zxing:1.9.13'
-//    implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
-//    implementation 'com.google.zxing:core:3.2.1'
+    implementation 'com.google.zxing:core:3.2.1'
+    implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
 }
 repositories {
     mavenCentral()
@@ -187,5 +187,8 @@ repositories {
 
     maven {
         url "https://dl.bintray.com/tamlx/BaseProject"
+    }
+    maven {
+        url "https://raw.github.com/embarkmobile/zxing-android-minimal/mvn-repo/maven-repository/"
     }
 }
