--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,18 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="qtc.project.pos">
 
-<!--    <uses-feature android:name="android.hardware.camera" />-->
-<!--    <uses-feature android:name="android.hardware.camera2" />-->
-<!--    <uses-feature android:name="android.hardware.camera.autofocus" />-->
-<!--    <uses-feature android:name="android.hardware.camera2.autofocus" />-->
-<!--    <uses-feature android:name="android.hardware.camera.flash" />-->
-<!--    <uses-feature android:name="android.hardware.camera2.flash" />-->
+    <uses-permission android:name="android.permission.CAMERA" tools:node="replace"/>
+    <uses-feature android:name="android.hardware.camera2" android:required="true"/>
 
-<!--    <uses-permission android:name="android.permission.VIBRATE" />-->
-
-<!--    <uses-feature-->
-<!--        android:glEsVersion="0x00020000"-->
-<!--        android:required="true" />-->
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -22,8 +16,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 <!--    <uses-permission-->
 <!--        android:name="android.permission.READ_PHONE_STATE"-->
 <!--        tools:node="remove" />-->
@@ -47,14 +40,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        android:hardwareAccelerated="false"
+        android:hardwareAccelerated="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".activity.Qr_BarcodeActivity">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
         </activity>
         <!--
      Set custom default icon. This is used when no icon is set for incoming notification messages.
@@ -78,7 +66,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
             <intent-filter>
                 <action android:name="check_auth" />
 
